# rust-experiment-process_files_ftp

./: Dockerfile  Dockerfile.Debug  Readme.md  docker-compose-debug.yml  docker-compose.yml
app_rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.Test  docker-compose-debug.yml  docker-compose.yml
app_rust/src/: config_app.rs  db_execution_model.rs  db_file_model.rs  ftp.rs  main.rs  thread_pool.rs
cli_rust/: Cargo.toml
cli_rust/src/: database.rs  main.rs
cli_rust/src/app/config/: config_render.rs
cli_rust/src/app/resources/: layout.rs
cli_rust/src/app/resources/layout/: help.rs  main.rs  show_process.rs
cli_rust/src/app/thread/: listen_event.rs
ftp/: Comandos.txt  docker-compose.yml
postgresql/data/base/1/: 2619
postgresql/data/base/16384/: 1247  1249  1259  16385  16391  16399  16400  16402  16414  16415  16416_fsm  16416_vm  16418  16419  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  (+6 more)
postgresql/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgresql/data/pg_multixact/members/: 0000
postgresql/data/pg_multixact/offsets/: 0000
postgresql/data/pg_stat/: db_0.stat  db_16384.stat  global.stat
postgresql/data/pg_xact/: 0000
