[package]
name = "process_files_in_ftp"
version = "0.1.0"
edition = "2018"
license= "MIT"
description= "Código rust para conectar a FTP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version= "1.0.130", features = ["derive"]}
ftp-client = "0.1.2"
chrono = "0.4"
exitcode = "1.1.2"
clap = "~2.27.0"
loading = "0.1.2"
postgres = "0.19.2"

[package.metadata.deb]
copyright = "2022, Oscar Sánchez<oscar.sanchez@savne.net>"
maintainer = "Oscar Sánchez<oscar.sanchez@savne.net>"
